--- a/nhl.html
+++ b/nhl.html
@@ -96,30 +96,69 @@
 </thead>
 <tbody>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-1">San Jose Sharks vs Detroit Red Wings</a></td>
-            <td>January 16, 2026 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-17 16:00:00" data-start="2026-01-16 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Minnesota Wild vs Buffalo Sabres</a></td>
+            <td>January 17, 2026 09:30 AM</td>
+            <td><span class="countdown-timer" data-end="2026-01-18 09:30:00" data-start="2026-01-17 09:30:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-2">Florida Panthers vs Carolina Hurricanes</a></td>
-            <td>January 16, 2026 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-17 16:00:00" data-start="2026-01-16 16:00:00"></span></td>
-        </tr>
-        <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-3">Tampa Bay Lightning vs St. Louis Blues</a></td>
-            <td>January 16, 2026 05:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-17 17:00:00" data-start="2026-01-16 17:00:00"></span></td>
-        </tr>
-        <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-4">Nashville Predators vs Colorado Avalanche</a></td>
-            <td>January 16, 2026 06:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-17 18:00:00" data-start="2026-01-16 18:00:00"></span></td>
-        </tr>
-        <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-5">Anaheim Ducks vs Los Angeles Kings</a></td>
-            <td>January 16, 2026 07:30 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-17 19:30:00" data-start="2026-01-16 19:30:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">New York Rangers vs Philadelphia Flyers</a></td>
+            <td>January 17, 2026 10:00 AM</td>
             <td><span class="countdown-timer" data-end="2026-01-18 10:00:00" data-start="2026-01-17 10:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">New York Islanders vs Calgary Flames</a></td>
+            <td>January 17, 2026 12:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-18 12:00:00" data-start="2026-01-17 12:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Seattle Kraken vs Utah Mammoth</a></td>
+            <td>January 17, 2026 02:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-18 14:00:00" data-start="2026-01-17 14:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Montreal Canadiens vs Ottawa Senators</a></td>
+            <td>January 17, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-18 16:00:00" data-start="2026-01-17 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-6">Carolina Hurricanes vs New Jersey Devils</a></td>
+            <td>January 17, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-18 16:00:00" data-start="2026-01-17 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-7">Columbus Blue Jackets vs Pittsburgh Penguins</a></td>
+            <td>January 17, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-18 16:00:00" data-start="2026-01-17 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-8">Florida Panthers vs Washington Capitals</a></td>
+            <td>January 17, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-18 16:00:00" data-start="2026-01-17 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-9">Toronto Maple Leafs vs Winnipeg Jets</a></td>
+            <td>January 17, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-18 16:00:00" data-start="2026-01-17 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-10">Boston Bruins vs Chicago Blackhawks</a></td>
+            <td>January 17, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-18 17:00:00" data-start="2026-01-17 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-11">Edmonton Oilers vs Vancouver Canucks</a></td>
+            <td>January 17, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-18 19:00:00" data-start="2026-01-17 19:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-12">Nashville Predators vs Vegas Golden Knights</a></td>
+            <td>January 17, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-18 19:00:00" data-start="2026-01-17 19:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-13">Los Angeles Kings vs Anaheim Ducks</a></td>
+            <td>January 17, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-18 19:00:00" data-start="2026-01-17 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
