--- a/soccer-streams-7.html
+++ b/soccer-streams-7.html
@@ -101,8 +101,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.shadow-ran.online/benfica.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://amg01334-beinsportsllc-beinxtra-localnow-kcy6r.amagi.tv/playlistR1080p.m3u8')">Stream 2 (EN)</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.shadow-ran.online/tudn.m3u8')">Stream 1</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -137,7 +136,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://601.shadow-ran.online/benfica.m3u8');
+            showPlayer('clappr', 'https://daffodil.shadow-ran.online/tudn.m3u8');
         };
     </script>
     <script>
