--- a/nba.html
+++ b/nba.html
@@ -143,84 +143,126 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-1">
-         New Orleans Pelicans vs Indiana Pacers
+         Utah Jazz vs Dallas Mavericks
         </a>
        </td>
        <td>
-        January 16, 2026 4:00 PM
+        January 17, 2026 2:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 17, 2026 4:00 PM:00" data-start="January 16, 2026 4:00 PM:00">
+        <span class="countdown-timer" data-end="January 18, 2026 2:00 PM:00" data-start="January 17, 2026 2:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-2">
-         Cleveland Cavaliers vs Philadelphia 76ers
+         Boston Celtics vs Atlanta Hawks
         </a>
        </td>
        <td>
-        January 16, 2026 4:00 PM
+        January 17, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 17, 2026 4:00 PM:00" data-start="January 16, 2026 4:00 PM:00">
+        <span class="countdown-timer" data-end="January 18, 2026 4:30 PM:00" data-start="January 17, 2026 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-3">
-         Chicago Bulls vs Brooklyn Nets
+         Indiana Pacers vs Detroit Pistons
         </a>
        </td>
        <td>
-        January 16, 2026 4:30 PM
+        January 17, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 17, 2026 4:30 PM:00" data-start="January 16, 2026 4:30 PM:00">
+        <span class="countdown-timer" data-end="January 18, 2026 4:30 PM:00" data-start="January 17, 2026 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-4">
-         Los Angeles Clippers vs Toronto Raptors
+         Phoenix Suns vs New York Knicks
         </a>
        </td>
        <td>
-        January 16, 2026 4:30 PM
+        January 17, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 17, 2026 4:30 PM:00" data-start="January 16, 2026 4:30 PM:00">
+        <span class="countdown-timer" data-end="January 18, 2026 4:30 PM:00" data-start="January 17, 2026 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-5">
-         Minnesota Timberwolves vs Houston Rockets
+         Oklahoma City Thunder vs Miami Heat
         </a>
        </td>
        <td>
-        January 16, 2026 6:30 PM
+        January 17, 2026 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 17, 2026 6:30 PM:00" data-start="January 16, 2026 6:30 PM:00">
+        <span class="countdown-timer" data-end="January 18, 2026 5:00 PM:00" data-start="January 17, 2026 5:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-6">
-         Washington Wizards vs Sacramento Kings
+         Minnesota Timberwolves vs San Antonio Spurs
         </a>
        </td>
        <td>
-        January 16, 2026 7:00 PM
+        January 17, 2026 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 17, 2026 7:00 PM:00" data-start="January 16, 2026 7:00 PM:00">
+        <span class="countdown-timer" data-end="January 18, 2026 5:00 PM:00" data-start="January 17, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Charlotte Hornets vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        January 17, 2026 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 18, 2026 5:30 PM:00" data-start="January 17, 2026 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Washington Wizards vs Denver Nuggets
+        </a>
+       </td>
+       <td>
+        January 17, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 18, 2026 6:00 PM:00" data-start="January 17, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Los Angeles Lakers vs Portland Trail Blazers
+        </a>
+       </td>
+       <td>
+        January 17, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 18, 2026 7:00 PM:00" data-start="January 17, 2026 7:00 PM:00">
         </span>
        </td>
       </tr>
