--- a/index.html
+++ b/index.html
@@ -184,29 +184,39 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.live/ppv-streams-1">TSZYU vs ZERAFA</a></td>
-<td>January 15, 2026 10:00 PM</td>
-<td><span class="countdown-timer" data-end="January 16, 2026 10:00:00 PM" data-start="January 15, 2026 10:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Ligue 1</a></td>
-<td>January 16, 2026 10:00 AM</td>
-<td><span class="countdown-timer" data-end="January 17, 2026 10:00:00 AM" data-start="January 16, 2026 10:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Manchester Derby</a></td>
+<td>January 17, 2026 04:30 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 04:30:00 AM" data-start="January 17, 2026 04:30:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-5">Laliga</a></td>
-<td>January 16, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 17, 2026 12:00:00 PM" data-start="January 16, 2026 12:00:00 PM"></span></td>
+<td>January 17, 2026 05:00 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 05:00:00 AM" data-start="January 17, 2026 05:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
-<td>January 16, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 17, 2026 05:00:00 PM" data-start="January 16, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer">Premier League</a></td>
+<td>January 17, 2026 07:00 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 AM" data-start="January 17, 2026 07:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-11">AFCON FINAL (Egypt VS Nigeria)</a></td>
+<td>January 17, 2026 08:00 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 08:00:00 AM" data-start="January 17, 2026 08:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/supercross">AMA Supercross - San Diego</a></td>
+<td>January 17, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 10:00:00 AM" data-start="January 17, 2026 10:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/nfl">NFL Playoffs</a></td>
+<td>January 17, 2026 1:30 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 01:30:00 PM" data-start="January 17, 2026 01:30:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-<td>January 16, 2026 4:00 PM</td>
-<td><span class="countdown-timer" data-end="January 17, 2026 04:00:00 PM" data-start="January 16, 2026 04:00:00 PM"></span></td>
+<td>January 17, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 04:00:00 PM" data-start="January 17, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
