--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 <td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 AM" data-start="January 17, 2026 07:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">AFCON FINAL (Egypt VS Nigeria)</a></td>
+<td><a href="https://roxiestreams.live/soccer-streams-11">AFCON Third Place</a></td>
 <td>January 17, 2026 08:00 AM</td>
 <td><span class="countdown-timer" data-end="January 18, 2026 08:00:00 AM" data-start="January 17, 2026 08:00:00 AM"></span></td>
 </tr>
