--- a/fighting.html
+++ b/fighting.html
@@ -98,9 +98,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
-<td>January 16, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 16, 2026 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/ppv-streams-1">BKFC 86: LANE vs PAGUE</a></td>
+<td>January 17, 2026 3:00 PM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 17, 2026 15:00:00"></span></td>
 </tr>
 <tr>
 </tbody>
