--- a/soccer-streams-1.html
+++ b/soccer-streams-1.html
@@ -103,7 +103,7 @@
 	<div class="streamchanger">
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('usa.m3u8', 'daffodil'))">Stream 1</button>
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('main.m3u8', 'daffodil'))">Stream 2</button>
-           onclick="showPlayer('clappr', 'https://601.shadow-ran.online/epl.m3u8')">Stream 3</button>
+           <button class="streambutton"onclick="showPlayer('clappr', 'https://601.shadow-ran.online/epl.m3u8')">Stream 3</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
