--- a/ppv-streams-3.html
+++ b/ppv-streams-3.html
@@ -101,7 +101,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-<button class="streambutton" onclick="showPlayer('iframe', 'https://embedsports.top/embed/admin/ppv-raf-05-covington-vs-rockhold/1')">Stream 1</button>
+<button class="streambutton" onclick="showPlayer('iframe', 'https://embedsports.top/embed/admin/ppv-oktagon-82-english/1')">Stream 1</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -121,7 +121,7 @@
 
     function showPlayer(playerType, url) {
         const container = document.getElementById('playerContainer');
-        container.innerHTML = ''; // Clear previous content
+        container.innerHTML = ''; 
 
         if (playerType === 'clappr') {
             if (clapprPlayer) {
@@ -140,17 +140,16 @@
                         marginheight="0" marginwidth="0" 
                         src="${url}" 
                         scrolling="no" allowfullscreen="yes" 
-                        allow="encrypted-media; picture-in-picture;" 
+                        allow="autoplay; encrypted-media; picture-in-picture;" 
                         width="100%" height="100%" frameborder="0">
                 </iframe>`;
         }
     }
 
-window.onload = function() {
-    showPlayer('iframe', 'https://embedsports.top/embed/admin/ppv-raf-05-covington-vs-rockhold/1');
-};
+    window.onload = function() {
+        showPlayer('iframe', 'https://embedsports.top/embed/admin/ppv-oktagon-82-english/1');
+    };
 </script>
-
 <script>
     document.addEventListener('contextmenu', function (e) {
         e.preventDefault();
