--- a/ppv-streams-3.html
+++ b/ppv-streams-3.html
@@ -99,7 +99,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-<button class="streambutton" onclick="showPlayer('iframe', 'https://justembeds.xyz/embed/20bb27b324e801346cb467a06242fc42')">Stream 1</button>
+<button class="streambutton" onclick="showPlayer('iframe', 'https://embedsports.top/embed/admin/ppv-oktagon-82-english/2')">Stream 1</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -145,7 +145,7 @@
     }
 
     window.onload = function() {
-        showPlayer('iframe', 'https://justembeds.xyz/embed/20bb27b324e801346cb467a06242fc42');
+        showPlayer('iframe', 'https://embedsports.top/embed/admin/ppv-oktagon-82-english/2');
     };
 </script>
 <script>
