--- a/ppv-streams-2.html
+++ b/ppv-streams-2.html
@@ -13,16 +13,17 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link href="/css/buttons.css" rel="stylesheet">
-    <link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
-    <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js"></script>
+<link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
+<script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EQ3BHVQGMN"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-EQ3BHVQGMN');
-    </script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EQ3BHVQGMN');
+</script>
     <style>
         .navbar-brand {
             color: pink;
@@ -71,6 +72,7 @@
             gap: 10px;
         }
     </style>
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-black">
@@ -81,13 +83,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/soccer">Soccer</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/mlb">MLB</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nhl">NHL</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/soccer">Soccer</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/mlb">MLB</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nhl">NHL</a></li>
+
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
                 </ul>
             </div>
@@ -98,11 +101,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <!-- RAF embed -->
-                <button class="streambutton"
-                        onclick="showPlayer('iframe', 'https://dlhd.link/stream/stream-69.php')">
-                    Stream 2
-                </button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://ru001.madayonoska.cam/out/v2/92ac97f6f501318799b7aa31f2b5b840/index.m3u8')">Stream 1</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -120,39 +119,26 @@
     <script>
         var clapprPlayer;
 
-        function showPlayer(playerType, url) {
-            const container = document.getElementById('playerContainer');
-            container.innerHTML = '';
-
-            if (playerType === 'clappr') {
+        function showPlayer(playerType, stream) {
+            if (playerType === "clappr") {
                 if (clapprPlayer) {
                     clapprPlayer.destroy();
                 }
+
                 clapprPlayer = new Clappr.Player({
-                    source: url,
-                    parentId: '#playerContainer',
+                    source: stream,
+                    parentId: "#playerContainer",
                     height: '100%',
                     width: '100%',
-                    autoPlay: true
+                    autoPlay: true,
                 });
-            } else if (playerType === 'iframe') {
-                container.innerHTML = `
-                    <iframe src="${url}"
-                            width="100%"
-                            height="100%"
-                            style="border:0; margin:0; padding:0; display:block;"
-                            allow="autoplay; encrypted-media; picture-in-picture"
-                            allowfullscreen>
-                    </iframe>`;
             }
         }
 
-        // Choose which stream autoplays on page load:
         window.onload = function() {
-
+            showPlayer('clappr', 'https://ru001.madayonoska.cam/out/v2/92ac97f6f501318799b7aa31f2b5b840/index.m3u8');
         };
     </script>
-
     <script>
         document.addEventListener('contextmenu', function (e) {
             e.preventDefault();
@@ -167,10 +153,10 @@
     </script>
     <script src="js/bootstrap.bundle.min.js"></script>
 
-    <script type="text/javascript">
-    aclib.runPop({
-        zoneId: '10754426',
-    });
-    </script>
-</body>
+
+<script type="text/javascript">
+aclib.runPop({
+zoneId: '10754426',
+});
+</script></body>
 </html>
