--- a/nba-streams-5.html
+++ b/nba-streams-5.html
@@ -101,7 +101,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.shadow-ran.online/nba2.m3u8')">Stream 2</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.shadow-ran.online/nba5.m3u8')">Stream 2</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -136,7 +136,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://daffodil.shadow-ran.online/nba2.m3u8');
+            showPlayer('clappr', 'https://601.shadow-ran.online/nba5.m3u8');
         };
     </script>
     <script>
