--- a/nhl.html
+++ b/nhl.html
@@ -159,6 +159,24 @@
             <td><a href="https://roxiestreams.live/nhl-streams-13">Los Angeles Kings vs Anaheim Ducks</a></td>
             <td>January 17, 2026 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2026-01-18 19:00:00" data-start="2026-01-17 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Sunday, January 18, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Tampa Bay Lightning vs Dallas Stars</a></td>
+            <td>January 18, 2026 11:00 AM</td>
+            <td><span class="countdown-timer" data-end="2026-01-19 11:00:00" data-start="2026-01-18 11:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Ottawa Senators vs Detroit Red Wings</a></td>
+            <td>January 18, 2026 02:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-19 14:00:00" data-start="2026-01-18 14:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">St. Louis Blues vs Edmonton Oilers</a></td>
+            <td>January 18, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-19 17:00:00" data-start="2026-01-18 17:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
