--- a/nba.html
+++ b/nba.html
@@ -268,6 +268,110 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for January 18, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Orlando Magic vs Memphis Grizzlies
+        </a>
+       </td>
+       <td>
+        January 18, 2026 9:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 19, 2026 9:00 AM:00" data-start="January 18, 2026 9:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Brooklyn Nets vs Chicago Bulls
+        </a>
+       </td>
+       <td>
+        January 18, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 19, 2026 4:00 PM:00" data-start="January 18, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         New Orleans Pelicans vs Houston Rockets
+        </a>
+       </td>
+       <td>
+        January 18, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 19, 2026 4:00 PM:00" data-start="January 18, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Charlotte Hornets vs Denver Nuggets
+        </a>
+       </td>
+       <td>
+        January 18, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 19, 2026 5:00 PM:00" data-start="January 18, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Portland Trail Blazers vs Sacramento Kings
+        </a>
+       </td>
+       <td>
+        January 18, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 19, 2026 6:00 PM:00" data-start="January 18, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Toronto Raptors vs Los Angeles Lakers
+        </a>
+       </td>
+       <td>
+        January 18, 2026 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 19, 2026 6:30 PM:00" data-start="January 18, 2026 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
