--- a/soccer.html
+++ b/soccer.html
@@ -98,73 +98,133 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">Toulouse vs Nice</a></td>
-<td>January 17, 2026 10:00 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Parma vs Genoa</a></td>
+<td>January 18, 2026 03:30 AM</td>
 <td><span class="countdown-timer" data-end="January 18, 2026 10:00:00 AM" data-start="January 17, 2026 10:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Cagliari vs Juventus</a></td>
-<td>January 17, 2026 11:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Getafe vs Valencia</a></td>
+<td>January 18, 2026 05:00 AM</td>
 <td><span class="countdown-timer" data-end="January 18, 2026 11:45:00 AM" data-start="January 17, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Real Betis vs Villarreal</a></td>
-<td>January 17, 2026 12:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Wolves vs Newcastle</a></td>
+<td>January 18, 2026 06:00 AM</td>
 <td><span class="countdown-timer" data-end="January 18, 2026 12:00:00 PM" data-start="January 17, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">Angers SCO vs Marseille</a></td>
-<td>January 17, 2026 12:05 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Bologna vs Fiorentina</a></td>
+<td>January 18, 2026 06:00 AM</td>
 <td><span class="countdown-timer" data-end="January 18, 2026 12:05:00 PM" data-start="January 17, 2026 12:05:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-12">Rio Ave vs Benfica</a></td>
-<td>January 17, 2026 12:30 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Strasbourg vs Metz</a></td>
+<td>January 18, 2026 06:00 AM</td>
 <td><span class="countdown-timer" data-end="January 18, 2026 12:30:00 PM" data-start="January 17, 2026 12:30:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-13">Boavista vs Flumiense</a></td>
-<td>January 17, 2026 1:30 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Stuttgart vs Union Berlin</a></td>
+<td>January 18, 2026 06:30 AM</td>
 <td><span class="countdown-timer" data-end="January 18, 2026 01:30:00 PM" data-start="January 17, 2026 01:30:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-14">Grêmio vs São Luiz</a></td>
-<td>January 17, 2026 2:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Atlético Madrid vs Deportivo Alavés</a></td>
+<td>January 18, 2026 07:15 AM</td>
 <td><span class="countdown-timer" data-end="January 18, 2026 02:00:00 PM" data-start="January 17, 2026 02:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-15">Necaxa vs Atlas</a></td>
-<td>January 17, 2026 3:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Nantes vs Paris</a></td>
+<td>January 18, 2026 08:15 AM</td>
 <td><span class="countdown-timer" data-end="January 18, 2026 03:00:00 PM" data-start="January 17, 2026 03:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-16">Chivas vs Querétaro</a></td>
-<td>January 17, 2026 3:07 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Rennes vs Le Havre</a></td>
+<td>January 18, 2026 08:15 AM</td>
 <td><span class="countdown-timer" data-end="January 18, 2026 03:07:00 PM" data-start="January 17, 2026 03:07:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-14">Volta Redonda vs Flamengo</a></td>
-<td>January 17, 2026 4:30 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Aston Villa vs Everton</a></td>
+<td>January 18, 2026 08:30 AM</td>
 <td><span class="countdown-timer" data-end="January 18, 2026 04:30:00 PM" data-start="January 17, 2026 04:30:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-17">Peñarol vs River Plate</a></td>
-<td>January 17, 2026 4:45 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Augsburg vs Freiburg</a></td>
+<td>January 18, 2026 08:30 AM</td>
 <td><span class="countdown-timer" data-end="January 18, 2026 04:45:00 PM" data-start="January 17, 2026 04:45:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-16">Tigres UANL vs Toluca</a></td>
-<td>January 17, 2026 5:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Torino vs Roma</a></td>
+<td>January 18, 2026 09:00 AM</td>
 <td><span class="countdown-timer" data-end="January 18, 2026 05:00:00 PM" data-start="January 17, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-18">Cruz Azul vs Puebla</a></td>
-<td>January 17, 2026 7:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Auchinleck Talbot vs Celtic</a></td>
+<td>January 18, 2026 09:30 AM</td>
 <td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 PM" data-start="January 17, 2026 07:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-19">Canada vs Guatemala</a></td>
-<td>January 17, 2026 7:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Celta De Vigo vs Rayo Vallecano</a></td>
+<td>January 18, 2026 09:30 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 PM" data-start="January 17, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Pumas UNAM vs Leon</a></td>
+<td>January 18, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 PM" data-start="January 17, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Senegal vs Morocco</a></td>
+<td>January 18, 2026 11:00 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 PM" data-start="January 17, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Lyon vs Brest</a></td>
+<td>January 18, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 PM" data-start="January 17, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Milan vs Lecce</a></td>
+<td>January 18, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 PM" data-start="January 17, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Real Sociedad vs Barcelona</a></td>
+<td>January 18, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 PM" data-start="January 17, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Bolivia vs Panama</a></td>
+<td>January 18, 2026 1:00 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 PM" data-start="January 17, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Atlético Mineiro vs Tombense</a></td>
+<td>January 18, 2026 1:00 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 PM" data-start="January 17, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Santos Laguna vs Juárez</a></td>
+<td>January 18, 2026 3:00 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 PM" data-start="January 17, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Sampaio Corrêa RJ vs Botafogo</a></td>
+<td>January 18, 2026 3:30 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 PM" data-start="January 17, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-13">Colo-Colo vs Alianza Lima</a></td>
+<td>January 18, 2026 3:45 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 PM" data-start="January 17, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-14">Boca Juniors vs Olimpia</a></td>
+<td>January 18, 2026 4:50 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 PM" data-start="January 17, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Pachuca vs América</a></td>
+<td>January 18, 2026 5:06 PM</td>
 <td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 PM" data-start="January 17, 2026 07:00:00 PM"></span></td>
 </tr>
 <tr>
