--- a/nfl-streams-2.html
+++ b/nfl-streams-2.html
@@ -196,7 +196,7 @@ function showTwitch() {
   twitchEmbed = new Twitch.Embed("twitch-embed", {
     width: "100%",
     height: "100%",
-    channel: "rylen4_smile",
+    channel: "fembylukynka",
     layout: "video",
     autoplay: true,
     parent: ["roxiestreams.live"] // must match your domain [web:1][web:3]
@@ -204,7 +204,7 @@ function showTwitch() {
 }
 
 function openTwitchPopup() {
-  var url = "https://player.twitch.tv/?channel=rylen4_smile&parent=roxiestreams.live";
+  var url = "https://player.twitch.tv/?channel=fembylukynka&parent=roxiestreams.live";
 
   window.open(
     url,
