--- a/index.html
+++ b/index.html
@@ -184,24 +184,24 @@
 <tbody>
 <tr>
 <tr>
+<td><a href="https://roxiestreams.live/nba">NBA</a></td>
+<td>January 19, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="January 20, 2026 04:00:00 PM" data-start="January 19, 2026 04:00:00 PM"></span></td>
+</tr>
+<tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Laliga</a></td>
-<td>January 18, 2026 12:00 PM</td>
+<td>January 19, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="January 19, 2026 12:00:00 PM" data-start="January 18, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Premier League</a></td>
-<td>January 18, 2026 12:00 PM</td>
+<td>January 19, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="January 19, 2026 12:00:00 PM" data-start="January 18, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
 <td>January 19, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="January 20, 2026 12:00:00 PM" data-start="January 19, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/nba">NBA</a></td>
-<td>January 19, 2026 04:00 PM</td>
-<td><span class="countdown-timer" data-end="January 20, 2026 04:00:00 PM" data-start="January 19, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
