--- a/nfl.html
+++ b/nfl.html
@@ -142,32 +142,19 @@
      <tbody>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/nfl-streams-1">
-         Houston Texans vs New England Patriots
+        <a href="https://roxiestreams.live/ncaa-streams-1">
+         Miami (FL) vs. 1 Indiana (CFP National Championship)
         </a>
        </td>
        <td>
-        January 18, 2026 12:00 PM
+        January 19, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 19, 2026 12:00 PM:00" data-start="January 18, 2026 12:00 PM:00">
+        <span class="countdown-timer" data-end="January 20, 2026 12:00 PM:00" data-start="January 19, 2026 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-2">
-         Los Angeles Rams vs Chicago Bears
-        </a>
-       </td>
-       <td>
-        January 18, 2026 3:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="January 19, 2026 3:30 PM:00" data-start="January 18, 2026 3:30 PM:00">
-        </span>
-       </td>
-      </tr>
      </tbody>
     </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
