--- a/soccer.html
+++ b/soccer.html
@@ -98,22 +98,57 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Cremonese vs Verona</a></td>
-<td>January 19, 2026 09:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Kairat vs Club Brugge</a></td>
+<td>January 19, 2026 07:30 AM</td>
 <td><span class="countdown-timer" data-end="January 20, 2026 09:30:00 AM" data-start="January 19, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Lazio vs Como</a></td>
-<td>January 19, 2026 11:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Bodø / Glimt vs Man City</a></td>
+<td>January 19, 2026 09:45 AM</td>
 <td><span class="countdown-timer" data-end="January 20, 2026 11:45:00 AM" data-start="January 19, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Elche vs Sevilla</a></td>
+<td><a href="https://roxiestreams.live/soccer-streams-11">UEFA Golazo Show</a></td>
 <td>January 19, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="January 20, 2026 12:00:00 PM" data-start="January 19, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Brighton vs Bournemouth</a></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Inter Milan vs Arsenal</a></td>
+<td>January 19, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 20, 2026 12:00:00 PM" data-start="January 19, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">København vs Napoli</a></td>
+<td>January 19, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 20, 2026 12:00:00 PM" data-start="January 19, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Olympiakos Piraeus vs Bayer Leverkusen</a></td>
+<td>January 19, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 20, 2026 12:00:00 PM" data-start="January 19, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Tottenham Hotspur vs Dortmund</a></td>
+<td>January 19, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 20, 2026 12:00:00 PM" data-start="January 19, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Villarreal vs Ajax</a></td>
+<td>January 19, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 20, 2026 12:00:00 PM" data-start="January 19, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Sporting CP vs PSG</a></td>
+<td>January 19, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 20, 2026 12:00:00 PM" data-start="January 19, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Real Madrid vs Monaco</a></td>
+<td>January 19, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 20, 2026 12:00:00 PM" data-start="January 19, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Wrexham vs Leicester City</a></td>
 <td>January 19, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="January 20, 2026 12:00:00 PM" data-start="January 19, 2026 12:00:00 PM"></span></td>
 </tr>
