--- a/nhl.html
+++ b/nhl.html
@@ -144,6 +144,49 @@
             <td><a href="https://roxiestreams.live/nhl-streams-10">New York Rangers vs Anaheim Ducks</a></td>
             <td>January 19, 2026 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2026-01-20 19:00:00" data-start="2026-01-19 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Tuesday, January 20, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Minnesota Wild vs Montreal Canadiens</a></td>
+            <td>January 20, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-21 16:00:00" data-start="2026-01-20 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">San Jose Sharks vs Tampa Bay Lightning</a></td>
+            <td>January 20, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-21 16:00:00" data-start="2026-01-20 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Ottawa Senators vs Columbus Blue Jackets</a></td>
+            <td>January 20, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-21 16:00:00" data-start="2026-01-20 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Boston Bruins vs Dallas Stars</a></td>
+            <td>January 20, 2026 04:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-21 16:30:00" data-start="2026-01-20 16:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Buffalo Sabres vs Nashville Predators</a></td>
+            <td>January 20, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-21 17:00:00" data-start="2026-01-20 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-6">St. Louis Blues vs Winnipeg Jets</a></td>
+            <td>January 20, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-21 17:00:00" data-start="2026-01-20 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-7">New Jersey Devils vs Edmonton Oilers</a></td>
+            <td>January 20, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-21 19:00:00" data-start="2026-01-20 19:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-8">New York Rangers vs Los Angeles Kings</a></td>
+            <td>January 20, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-21 19:00:00" data-start="2026-01-20 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
