--- a/index.html
+++ b/index.html
@@ -184,29 +184,19 @@
 <tbody>
 <tr>
 <tr>
+<td><a href="https://roxiestreams.live/soccer">UEFA Champions League</a></td>
+<td>January 20, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 21, 2026 12:00:00 PM" data-start="January 20, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
 <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-<td>January 19, 2026 10:00 AM</td>
-<td><span class="countdown-timer" data-end="January 20, 2026 10:00:00 AM" data-start="January 19, 2026 10:00:00 AM"></span></td>
+<td>January 20, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="January 21, 2026 04:00:00 PM" data-start="January 20, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Laliga</a></td>
-<td>January 19, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 20, 2026 12:00:00 PM" data-start="January 19, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Premier League</a></td>
-<td>January 19, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 20, 2026 12:00:00 PM" data-start="January 19, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
-<td>January 19, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 20, 2026 12:00:00 PM" data-start="January 19, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-1">CFP National Championship</a></td>
-<td>January 19, 2026 4:30 PM</td>
-<td><span class="countdown-timer" data-end="January 21, 2026 12:00:00 PM" data-start="January 19, 2026 4:30:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
+<td>January 20, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="January 21, 2026 05:00:00 PM" data-start="January 20, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
