--- a/fighting.html
+++ b/fighting.html
@@ -98,9 +98,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
-<td>January 19, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 19, 2026 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
+<td>January 20, 2026 17:00 PM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 20, 2026 17:00:00"></span></td>
 </tr>
 <tr>
 </tbody>
