--- a/nhl.html
+++ b/nhl.html
@@ -124,6 +124,49 @@
             <td><a href="https://roxiestreams.live/nhl-streams-6">Washington Capitals vs Vancouver Canucks</a></td>
             <td>January 21, 2026 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2026-01-22 19:00:00" data-start="2026-01-21 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Thursday, January 22, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Vegas Golden Knights vs Boston Bruins</a></td>
+            <td>January 22, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-23 16:00:00" data-start="2026-01-22 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Buffalo Sabres vs Montreal Canadiens</a></td>
+            <td>January 22, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-23 16:00:00" data-start="2026-01-22 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Chicago Blackhawks vs Carolina Hurricanes</a></td>
+            <td>January 22, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-23 16:00:00" data-start="2026-01-22 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Dallas Stars vs Columbus Blue Jackets</a></td>
+            <td>January 22, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-23 16:00:00" data-start="2026-01-22 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Ottawa Senators vs Nashville Predators</a></td>
+            <td>January 22, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-23 17:00:00" data-start="2026-01-22 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-6">Florida Panthers vs Winnipeg Jets</a></td>
+            <td>January 22, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-23 17:00:00" data-start="2026-01-22 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-7">Pittsburgh Penguins vs Edmonton Oilers</a></td>
+            <td>January 22, 2026 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-23 18:00:00" data-start="2026-01-22 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-8">Detroit Red Wings vs Minnesota Wild</a></td>
+            <td>January 22, 2026 06:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-23 18:30:00" data-start="2026-01-22 18:30:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
