--- a/nba.html
+++ b/nba.html
@@ -240,6 +240,138 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for January 22, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Charlotte Hornets vs Orlando Magic
+        </a>
+       </td>
+       <td>
+        January 22, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 23, 2026 4:00 PM:00" data-start="January 22, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Houston Rockets vs Philadelphia 76ers
+        </a>
+       </td>
+       <td>
+        January 22, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 23, 2026 4:00 PM:00" data-start="January 22, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Denver Nuggets vs Washington Wizards
+        </a>
+       </td>
+       <td>
+        January 22, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 23, 2026 4:00 PM:00" data-start="January 22, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Golden State Warriors vs Dallas Mavericks
+        </a>
+       </td>
+       <td>
+        January 22, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 23, 2026 4:30 PM:00" data-start="January 22, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Chicago Bulls vs Minnesota Timberwolves
+        </a>
+       </td>
+       <td>
+        January 22, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 23, 2026 5:00 PM:00" data-start="January 22, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         San Antonio Spurs vs Utah Jazz
+        </a>
+       </td>
+       <td>
+        January 22, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 23, 2026 6:00 PM:00" data-start="January 22, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Los Angeles Lakers vs Los Angeles Clippers
+        </a>
+       </td>
+       <td>
+        January 22, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 23, 2026 7:00 PM:00" data-start="January 22, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Miami Heat vs Portland Trail Blazers
+        </a>
+       </td>
+       <td>
+        January 22, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 23, 2026 7:00 PM:00" data-start="January 22, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
