--- a/nfl.html
+++ b/nfl.html
@@ -142,12 +142,27 @@
      <tbody>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/ncaa-streams-1">
-         Miami (FL) vs. 1 Indiana (CFP National Championship)
+        <a href="https://roxiestreams.live/nfl-streams-1">
+         New England Patriots vs Denver Broncos
         </a>
        </td>
        <td>
-        January 19, 2026 4:30 PM
+        January 25, 2026 12:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 20, 2026 12:00 PM:00" data-start="January 19, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-2">
+         Los Angeles Rams vs Seattle Seahawks
+        </a>
+       </td>
+       <td>
+        January 25, 2026 3:30 PM
        </td>
        <td>
         <span class="countdown-timer" data-end="January 20, 2026 12:00 PM:00" data-start="January 19, 2026 4:30 PM:00">
