--- a/soccer.html
+++ b/soccer.html
@@ -105,22 +105,22 @@
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Auxerre vs PSG</a></td>
 <td>January 23, 2026 11:00 AM</td>
-<td><span class="countdown-timer" data-end="January 23, 2026 09:45:00 AM" data-start="January 22, 2026 09:45:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 24, 2026 11:00:00 AM" data-start="January 23, 2026 11:00:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">St. Pauli vs Hamburger SV</a></td>
 <td>January 23, 2026 11:30 AM</td>
-<td><span class="countdown-timer" data-end="January 23, 2026 09:45:00 AM" data-start="January 22, 2026 09:45:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 24, 2026 11:30:00 AM" data-start="January 23, 2026 11:30:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Inter Milan vs Pisa</a></td>
 <td>January 23, 2026 11:45 AM</td>
-<td><span class="countdown-timer" data-end="January 23, 2026 09:45:00 AM" data-start="January 22, 2026 09:45:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 24, 2026 11:45:00 AM" data-start="January 23, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Levante vs Elche</a></td>
 <td>January 23, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 23, 2026 09:45:00 AM" data-start="January 22, 2026 09:45:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 24, 2026 12:00:00 PM" data-start="January 23, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
