--- a/fighting.html
+++ b/fighting.html
@@ -108,7 +108,7 @@
 <td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 23, 2026 17:00:00"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/ppv-streams-1">UFC 324: Gaethje vs Pimblett</a></td>
+<td><a href="https://roxiestreams.live/ufc">UFC 324: Gaethje vs Pimblett</a></td>
 <td>January 24, 2026 14:00 PM</td>
 <td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 24, 2026 14:00:00"></span></td>
 </tr>
