--- a/ufc.html
+++ b/ufc.html
@@ -13,9 +13,17 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link href="/css/buttons.css" rel="stylesheet">
-    <link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
-    <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js'></script>
+<link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
+<script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EQ3BHVQGMN"></script>
+    <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EQ3BHVQGMN');
+</script>
     <style>
         .navbar-brand {
             color: pink;
@@ -64,6 +72,7 @@
             gap: 10px;
         }
     </style>
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-black">
@@ -74,14 +83,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/soccer">Soccer</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/mlb">MLB</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/soccer">Soccer</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/mlb">MLB</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nhl">NHL</a></li>
 
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
                 </ul>
             </div>
@@ -92,9 +101,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="randomStream1()">Stream 1</button>
-                <button class="streambutton" onclick="randomStream2()">Stream 2</button>
-                <button class="streambutton" onclick="randomStream3()">Stream 3</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.shadow-ran.online/ufc.m3u8')">Stream 1</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -128,83 +135,8 @@
             }
         }
 
-        // Stream 1 Randomizer
-        function randomStream1() {
-            var links = [
-                "https://daffodil.shadow-ran.online/ufcc.m3u8",
-                "https://abby.shadow-ran.online/ufcc.m3u8",
-            ];
-            var randomLink = links[Math.floor(Math.random() * links.length)];
-            showPlayer('clappr', randomLink);
-        }
-
-        // Stream 2 Randomizer
-        function randomStream2() {
-            var links = [
-                "https://daffodil.shadow-ran.online/tnt.m3u8",
-                "https://abby.shadow-ran.online/tnt.m3u8",
-            ];
-            var randomLink = links[Math.floor(Math.random() * links.length)];
-            showPlayer('clappr', randomLink);
-        }
-
-        // Stream 3 Randomizer
-        function randomStream3() {
-            var links = [
-                "https://daffodil.shadow-ran.online/ufcalt.m3u8",
-                "https://abby.shadow-ran.online/ufcalt.m3u8",
-            ];
-            var randomLink = links[Math.floor(Math.random() * links.length)];
-            showPlayer('clappr', randomLink);
-        }
-
-        // Stream 4 Randomizer
-        function randomStream4() {
-            var links = [
-                "https://600.tanjung.eu.org/hub.m3u8",
-                "https://600.tanjung.eu.org/hub.m3u8",
-                "https://600.tanjung.eu.org/hub.m3u8",
-                "https://600.tanjung.eu.org/hub.m3u8",
-                "https://ataide.xiaolongyi.dpdns.org/hub.m3u8"
-            ];
-            var randomLink = links[Math.floor(Math.random() * links.length)];
-            showPlayer('clappr', randomLink);
-        }
-
-        // Stream 5 Randomizer
-        function randomStream5() {
-            var links = [
-                "https://600.tanjung.eu.org/plus.m3u8",
-                "https://600.tanjung.eu.org/plus.m3u8",
-                "https://600.tanjung.eu.org/plus.m3u8",
-                "https://600.tanjung.eu.org/plus.m3u8",
-                "https://ataide.xiaolongyi.dpdns.org/plus.m3u8"
-            ];
-            var randomLink = links[Math.floor(Math.random() * links.length)];
-            showPlayer('clappr', randomLink);
-        }
-
-        // Stream 6 Randomizer
-        function randomStream6() {
-            var links = [
-                "https://600.tanjung.eu.org/simply.m3u8",
-                "https://600.tanjung.eu.org/simply.m3u8",
-                "https://600.tanjung.eu.org/simply.m3u8",
-                "https://600.tanjung.eu.org/simply.m3u8",
-                "https://ataide.xiaolongyi.dpdns.org/simply.m3u8"
-            ];
-            var randomLink = links[Math.floor(Math.random() * links.length)];
-            showPlayer('clappr', randomLink);
-        }
-
-        // On load: randomize default stream from Stream 1 sources
         window.onload = function() {
-            var stream1Links = [
-                "https://daffodil.shadow-ran.online/ufcc.m3u8",
-                "https://abby.shadow-ran.online/ufcc.m3u8",
-            ];
-            var randomDefault = stream1Links[Math.floor(Math.random() * stream1Links.length)];
-            showPlayer('clappr', randomDefault);
+            showPlayer('clappr', 'https://601.shadow-ran.online/ufc.m3u8');
         };
     </script>
     <script>
